Enlarge #downloadbox to avoid cutting off filenames.

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -54,7 +54,7 @@ footer{
   }
   
   #downloadbox{
-    width: 200px;
+    width: 350px;
     border: 1px solid #555;
     background: #eee;
     margin: 10px auto;
